--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
 	background: url("http://wallpaperlayer.com/img/2015/6/simple-vintage-background-6645-6923-hd-wallpapers.jpg") no-repeat center center fixed;
 	background-size: cover;
 	font-family: papyrus;
+	background-color: #F4F0E7;
 }
 
 .content {
