--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
 
 .center {
 	text-align: center;
+
+}
+.centered {
+	margin: 0 auto;
 }
 
 body {
@@ -21,7 +25,7 @@ body {
 }
 
 .help {
-	font-size: 30px;
+	font-size: 20px;
 	color: #B79881;
 }
 
